# CoMatch

./: .gitignore  README.md  environment.yaml  onnx_tensorrt_todo.md  pyproject.toml  test_inference.py
comatch/: __init__.py  api.py
configs/: __init__.py
configs/loftr/: __init__.py
src/loftr/: __init__.py  fixed_size_export.py  loftr.py
src/loftr/loftr_module/: fine_preprocess_epipolar.py  linear_attention.py  transformer.py
src/loftr/utils/: coarse_matching.py  fine_matching_epipolar.py  geometry.py  supervision.py
